# waystoneOS

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  ROLE.md
.planning/: .continue-here.md  HANDOFF.json
cli/host/: Cargo.toml
cli/host/src/: main.rs
cli/host/tests/: commands.rs
cli/identity/: Cargo.toml
cli/identity/src/: main.rs
cli/identity/tests/: commands.rs
cli/listen/: Cargo.toml
cli/listen/src/: main.rs
cli/listen/tests/: commands.rs
cli/project/: Cargo.toml
cli/project/src/: main.rs
cli/project/tests/: commands.rs
cli/publish/: Cargo.toml
cli/publish/src/: main.rs
cli/publish/tests/: commands.rs
cli/record/: Cargo.toml
cli/record/src/: main.rs
cli/record/tests/: commands.rs
cli/way/: Cargo.toml
cli/way/src/: main.rs
cli/way/tests/: commands.rs
crates/audio-metadata/: Cargo.toml
crates/audio-metadata/src/: lib.rs
crates/audio-service/: Cargo.toml
crates/audio-service/src/: lib.rs
crates/cli-output/: Cargo.toml
crates/cli-output/src/: lib.rs
crates/host-identity/: Cargo.toml
crates/host-identity/src/: lib.rs
crates/host-service/: Cargo.toml
crates/host-service/src/: lib.rs
crates/identity-service/: Cargo.toml
crates/identity-service/src/: lib.rs
crates/project-format/: Cargo.toml
crates/project-format/src/: lib.rs
crates/project-service/: Cargo.toml
crates/project-service/src/: lib.rs
crates/publication-history/: Cargo.toml
crates/publication-history/src/: lib.rs
crates/publish-plan/: Cargo.toml
crates/publish-plan/src/: lib.rs
crates/publish-service/: Cargo.toml
crates/publish-service/src/: lib.rs
docs/architecture/: AUDIO-METADATA.md  CHARTER.md  CLI-STANDARDS.md  DBUS-ADAPTER-PLAN.md  HOST-IDENTITY-MODEL.md  PROJECT-FORMAT.md  PROJECT-SERVICE.md  PUBLISHING-SERVICE.md  README.md  REPOSITORY-BOUNDARY.md  SECURITY-MODEL.md  SERVICE-BOUNDARIES.md  SERVICE-CONTRACTS.md  SESSION-INSTALL-LAYOUT.md  TERMINOLOGY.md  VERSION-0.1-SCOPE.md  WORKFLOWS.md  WORKSPACE-UI-PLAN.md
docs/decisions/: 0001-product-identity-and-release-format.md  0002-debian-prototype-before-yocto-image.md  0003-shared-services-for-gui-and-cli.md  0004-waystone-workspace-visual-direction.md  0005-first-party-application-independence.md  0006-audio-scope-for-version-1.md  0007-wlroots-compositor-sequencing.md  0008-immutable-system-and-encrypted-persistence.md  0009-licensing-policy.md  0010-os-first-before-add-on-app-integration.md  0011-project-format-v0.md  0012-workspace-ui-prototype-route.md  0013-first-dbus-adapter-slice.md  0014-dbus-removable-executor-shape.md  0015-debian-session-install-layout.md  README.md  template.md
docs/development/: CHECKPOINT.md  IMPLEMENTATION-STATUS.md  MANUAL-PREVIEW-CHECKLIST.md  MANUAL-PREVIEW-FINDINGS.md  PHASE-0-0.1-ALIGNMENT.md  PUBLISH-TRANSFER-READINESS-AUDIT.md  README.md  VERSION-0.1-MILESTONE.md  WORKSPACE-PREVIEW-GUIDE.md  WORKSPACE-QT.md
examples/connections/hosts/: offgridholdout.toml
examples/connections/identities/: nick-pub.toml
examples/projects/audio-capsule.wayproject/: project.toml
examples/projects/minimal-capsule.wayproject/: project.toml
scripts/: audiod-dbus-activation-smoke.sh  audiod-dbus-smoke.sh  audiod-systemd-unit-smoke.sh  cli-json-contract-smoke.sh  host-identity-dbus-activation-smoke.sh  host-identity-dbus-smoke.sh  host-identity-systemd-unit-smoke.sh  install-layout-temp-root-smoke.sh  projectd-dbus-activation-smoke.sh  projectd-dbus-smoke.sh  projectd-systemd-unit-smoke.sh  publishd-dbus-activation-smoke.sh  publishd-dbus-smoke.sh  publishd-systemd-unit-smoke.sh  run-dev-session.sh  session-dev-smoke.sh  session-layout-smoke.sh  workspace-qt-project-smoke.sh  workspace-qt-smoke.sh
services/audiod/: Cargo.toml  README.md
services/audiod/dbus/: org.waystone.Audio1.service
services/audiod/src/: dbus.rs  main.rs
services/audiod/systemd/: waystone-audiod.service
services/hostd/: Cargo.toml  README.md
services/hostd/dbus/: org.waystone.Host1.service
services/hostd/src/: dbus.rs  main.rs
services/hostd/systemd/: waystone-hostd.service
services/identityd/: Cargo.toml  README.md
services/identityd/src/: dbus.rs  (+1 more)
services/projectd/: Cargo.toml  README.md
services/projectd/dbus/: org.waystone.Project1.service
services/projectd/src/: dbus.rs  main.rs
services/projectd/systemd/: waystone-projectd.service
services/publishd/: Cargo.toml  README.md
services/publishd/dbus/: org.waystone.Publish1.service
services/publishd/src/: dbus.rs  main.rs
services/publishd/systemd/: waystone-publishd.service
session/: install-layout.toml  waystone-session  waystone.desktop
ui/workspace-qt/: CMakeLists.txt  README.md  workspace.example.ini
ui/workspace-qt/src/: cli_adapter.cpp  cli_adapter.h  main.cpp  workspace_config.cpp  workspace_config.h  workspace_pages.cpp  workspace_pages.h
(+17 files in other folders)
