[package]
name = "waystone-publish-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "publish"
path = "src/main.rs"

[dependencies]
waystone-cli-output = { path = "../../crates/cli-output" }
waystone-publication-history = { path = "../../crates/publication-history" }
waystone-publish-plan = { path = "../../crates/publish-plan" }
waystone-publish-service = { path = "../../crates/publish-service" }
