[package]
name = "waystone-record-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "record"
path = "src/main.rs"

[dependencies]
waystone-cli-output = { path = "../../crates/cli-output" }
waystone-audio-metadata = { path = "../../crates/audio-metadata" }
waystone-audio-service = { path = "../../crates/audio-service" }
waystone-project-format = { path = "../../crates/project-format" }
