[package]
name = "waystone-publishd"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "waystone-publishd"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
waystone-publish-plan = { path = "../../crates/publish-plan" }
waystone-publish-service = { path = "../../crates/publish-service" }
zbus = "=5.13.1"
zbus_macros = "=5.13.1"
zbus_names = "=4.3.1"
zvariant = "=5.9.1"
zvariant_derive = "=5.9.1"
zvariant_utils = "=3.3.0"
